tweaked more layout issues

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,14 @@ html {
     opacity: 0.8;
 }
 
+@media (max-width: 480px) {
+    .logo {
+        top: 0px;
+        height: 95px;
+        transform: translateX(-65%);
+    }
+}
+
 .intro-text {
         /* font-size: 120px; */
         font-size: clamp(2rem, 8vw, 120px);
@@ -291,7 +299,6 @@ p {
 
 #intro-header {
     z-index: 1;
-    height: 100vh;
     display: flex;
     flex-direction: column;
     position: sticky;
@@ -641,7 +648,7 @@ button:hover {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: rgba(0, 0, 0, 0.85);
+    background: rgba(0, 0, 0, 0.95);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -650,6 +657,16 @@ button:hover {
     z-index: 1000;
     overflow-y: auto;
     padding: 1rem;
+}
+
+.lightbox-title, .lightbox-description {
+    padding: 20px;
+    margin-bottom: 16px;
+   max-width: 600px;
+}
+
+#lightboxExtraImg2, #lightboxExtraImg3 {
+    border-style: none;
 }
 
 .lightbox.hidden {
@@ -665,6 +682,7 @@ button:hover {
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.8);
     border-radius: 8px;
     transition: transform 0.3s ease;
+    margin: 20px;
 }
 
 
@@ -711,19 +729,26 @@ button:hover {
 }
 
 .lightbox-extra-img {
-  max-width: 100%;
+  max-width: 90%;
   max-height: 80vh;
   object-fit: contain;
   border-radius: 8px;
+ 
 }
 
 .lightbox-extra-img-2 {
-    border: 2px solid rgb(213, 208, 208);
-    max-width: 100%;
+    max-width: 90%;
     max-height: 80vh;
     object-fit: contain;
     border-radius: 8px;
 
+}
+
+.lightbox-extra-img-3 {
+    max-width: 90%;
+    max-height: 80vh;
+    object-fit: contain;
+    border-radius: 8px;
 }
 
 
